--- a/Form_eleves.html
+++ b/Form_eleves.html
@@ -623,7 +623,7 @@
 
                                 <div class="input-group">
                                     <label for="parent2Email" class="block text-sm font-medium text-gray-700 mb-2">
-                                        Email
+                                        Email joff
                                     </label>
                                     <input type="email" id="parent2Email" name="parent2Email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-200 focus:border-indigo-500 transition-all" placeholder="parent@example.com">
                                 </div>
